Fix message send
